--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -445,92 +445,141 @@
             </table>
         </div>
     </div>
-</div>
-<div class="container-fluid my-5">
-    <div class="row text-center justify-content-around">
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-md-5 mb-lg-2">
-            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+    <div class="col-12 text-center pb-5">
+        <h2 class="reveal text-center" style="color: purple;">
+            <strong>INSTRUÇÕES PARA LIGAÇÕES TELEFÔNICAS</strong>
+        </h2>
+        <div class="d-flex align-items-center justify-content-center my-3 reveal">
+            <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
+            <span class="px-2 text-muted" style="font-size: 2rem;">
+                <i class="fa-solid fa-hashtag"></i>
+            </span>
+            <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
         </div>
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>biosoftcosmeticos</div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2">
-            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-facebook px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-lg-2 mb-md-5">
-            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-youtube px-2" style="color: #d3d3d3;"></i>softhairoficial</div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2">
-            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-linkedin px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-md-5 mb-lg-2">
-            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-tiktok px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-lg-2 mb-md-5 mb-2">
-            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-tiktok px-2" style="color: #d3d3d3;"></i>biosoftcosmeticos</div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
-            <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-pinterest px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
-        </div>
+        <div class="reveal" style="font-size: 1.2rem; color: #333;">
+            <p>Prezados(as),</p>
+            <p>Visando orientar e padronizar a utilização do sistema telefônico interno, seguem abaixo as instruções para realizar ligações:</p>
+
+            <p style="color: purple"><i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Para Puxar Ligações:</strong></p><p>5 + RAMAL DESEJADO</p>
+
+            <p style="color: purple"><i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Para Transferir Ligações:</strong></p><p>FLASH + RAMAL DESEJADO</p>
+
+            <p style="color: purple"><i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Interurbano Para Telefone Fixo:</strong></p>
+            <p>0 + DDD + NÚMERO DO TELEFONE</p>
+            <p>
+                <em class=""><strong>Atenção: Não utilize código de operadora para chamadas interurbanas para telefone fixo.</strong></em><br>
+                <em class=""><strong>Proibido realizar ligações do fixo para celular.</strong></em>
+            </p>
+
+                 <p style="color: purple">
+                     <i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Interurbano Para Celular:</strong>
+                 </p><p>021 + DDD + NÚMERO DO CELULAR</p>
+                ✅ <em>Utilizar sempre a operadora Claro para esse tipo de ligação.</em>
 
 
-        <div class="col-12 col-md-5 my-2 ">
-            <a href="https://loja.softhair.com.br" target="_blank" style="color: purple;" class="text-decoration-none">
-                <h3>loja.softhair.com.br</h3>
-            </a>
-        </div>
-        <div class="col-12 col-md-5 my-2 ">
-            <a href="https://softhair.com.br/" target="_blank" style="color: purple;" class="text-decoration-none">
-                <h3>softhair.com.br</h3>
-            </a>
+            <p>Em caso de dúvidas, entre em contato com o setor de TI.</p>
+
         </div>
     </div>
 </div>
 
 
+        <div class="col-12 mb-5">
+            <h2 class="reveal text-center" style="color: purple;"><strong>SIGA-NOS NAS REDES SOCIAIS</strong></h2>
+            <div class="d-flex align-items-center justify-content-center my-3 reveal">
+                <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
+                <span class="px-2 text-muted" style="font-size: 2rem;">
+                    <i class="fa-solid fa-at"></i>
+                </span>
+                <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
+            </div>
+        </div>
 
-<script src="~/Scripts/jquery-3.7.1.min.js"></script>
-<script src="~/Scripts/bootstrap.bundle.js"></script>
+    <div class="container-fluid my-5">
+        <div class="row text-center justify-content-around">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-md-5 mb-lg-2">
+                <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>biosoftcosmeticos</div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2">
+                <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-facebook px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-lg-2 mb-md-5">
+                <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-youtube px-2" style="color: #d3d3d3;"></i>softhairoficial</div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2">
+                <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-linkedin px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-md-5 mb-lg-2">
+                <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-tiktok px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-lg-2 mb-md-5 mb-2">
+                <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-tiktok px-2" style="color: #d3d3d3;"></i>biosoftcosmeticos</div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-pinterest px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
+            </div>
 
-<script src="https://cdn.datatables.net/v/dt/dt-2.2.2/datatables.min.js" integrity="sha384-2Ul6oqy3mEjM7dBJzKOck1Qb/mzlO+k/0BQv3D3C7u+Ri9+7OBINGa24AeOv5rgu" crossorigin="anonymous"></script>
 
-<script>
-    new DataTable('#myTable2', {
-        paging: false,
-        scrollCollapse: true,
-        ordering: false,
-        layout: {
-            topStart: 'search',
-            topEnd: null,
-            bottomStart: null,
-        },
-        scrollY: '700px', // Aqui você pode configurar o número de itens por página se quiser, mas o menu não será exibido
-        language: {
-            search: "🔍",
-            searchPlaceholder: "PESQUISE AQUI...",
-            decimal: ",",
-            "sInfo": "",
-        },
-    });
+            <div class="col-12 col-md-5 my-2 ">
+                <a href="https://loja.softhair.com.br" target="_blank" style="color: purple;" class="text-decoration-none">
+                    <h3>loja.softhair.com.br</h3>
+                </a>
+            </div>
+            <div class="col-12 col-md-5 my-2 ">
+                <a href="https://softhair.com.br/" target="_blank" style="color: purple;" class="text-decoration-none">
+                    <h3>softhair.com.br</h3>
+                </a>
+            </div>
+        </div>
+    </div>
 
-    // Ajustando a largura da pesquisa
-    $('.dt-search').css({
-        'padding-bottom': '15px',
-    });
-    $(document).ready(function () {
-        // Adicionando o evento de clique para copiar o email
-        $('.email-cell').click(function () {
-            // Copiar o conteúdo da célula para a área de transferência
-            var email = $(this).text();
 
-            // Usando a API do Clipboard
-            navigator.clipboard.writeText(email).then(function () {
-                // Feedback para o usuário (alerta simples)
-                alert('Email copiado para a área de transferência: ' + email);
-            }).catch(function (err) {
-                alert('Erro ao copiar o email: ' + err);
+
+    <script src="~/Scripts/jquery-3.7.1.min.js"></script>
+    <script src="~/Scripts/bootstrap.bundle.js"></script>
+
+    <script src="https://cdn.datatables.net/v/dt/dt-2.2.2/datatables.min.js" integrity="sha384-2Ul6oqy3mEjM7dBJzKOck1Qb/mzlO+k/0BQv3D3C7u+Ri9+7OBINGa24AeOv5rgu" crossorigin="anonymous"></script>
+
+    <script>
+        new DataTable('#myTable2', {
+            paging: false,
+            scrollCollapse: true,
+            ordering: false,
+            layout: {
+                topStart: 'search',
+                topEnd: null,
+                bottomStart: null,
+            },
+            scrollY: '700px', // Aqui você pode configurar o número de itens por página se quiser, mas o menu não será exibido
+            language: {
+                search: "🔍",
+                searchPlaceholder: "PESQUISE AQUI...",
+                decimal: ",",
+                "sInfo": "",
+            },
+        });
+
+        // Ajustando a largura da pesquisa
+        $('.dt-search').css({
+            'padding-bottom': '15px',
+        });
+        $(document).ready(function () {
+            // Adicionando o evento de clique para copiar o email
+            $('.email-cell').click(function () {
+                // Copiar o conteúdo da célula para a área de transferência
+                var email = $(this).text();
+
+                // Usando a API do Clipboard
+                navigator.clipboard.writeText(email).then(function () {
+                    // Feedback para o usuário (alerta simples)
+                    alert('Email copiado para a área de transferência: ' + email);
+                }).catch(function (err) {
+                    alert('Erro ao copiar o email: ' + err);
+                });
             });
         });
-    });
-</script>
+    </script>
 
