COMMIT NOVA FUNCIONARIA

--- a/Intranet/Views/Home/_About.cshtml
+++ b/Intranet/Views/Home/_About.cshtml
@@ -108,7 +108,7 @@
                         <tr>
                             <td>6</td>
                             <td>09:30 – 09:40</td>
-                            <td>Thiago Soares, Luana Alves,</td>
+                            <td>Thiago Soares, Luana Alves, Isadora Mirella</td>
                         </tr>
                         <tr>
                             <td>7</td>
@@ -218,8 +218,8 @@
                                 <td>Diego</td>
                                 <td>Dayse Xavier</td>
                                 <td></td>
-                                <td>Livia</td>
-                                <td></td>
+                                <td>Isadora Mirella</td>
+                                <td>Lívia</td>
                                 <td></td>
                                 <td></td>
                             </tr>
