--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -11,8 +11,8 @@
         cursor: pointer
     }
 </style>
-<div class="" style="width: 100%; height: 40px; background-color: white;"></div>
-<div class="container-fluid mb-5" style="background-color: #F8F9FA;">
+
+<div class="container-fluid mb-5 pt-5" style="background-color: #F8F9FA;">
     <div class="row justify-content-center mx-3 reveal">
         <div class="text-center mt-3">
             <span class="reveal py-2 px-5 fs-3 rounded-4" style="color:purple; background-color: #F8F9FA;"><strong>CONTATOS DOS COLABORADORES</strong></span>
@@ -105,7 +105,7 @@
                         <td>Comercial</td>
                     </tr>
                     <tr>
-                        <td>Isabella Freesz</td>
+                        <td>Isadora Mirella</td>
                         <td>7733</td>
                         <td class="email-cell">comercial2@softhair.com.br</td>
                         <td>Comercial</td>
@@ -460,9 +460,11 @@
             <p>Prezados(as),</p>
             <p>Visando orientar e padronizar a utilização do sistema telefônico interno, seguem abaixo as instruções para realizar ligações:</p>
 
-            <p style="color: purple"><i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Para Puxar Ligações:</strong></p><p>5 + RAMAL DESEJADO</p>
+            <p style="color: purple"><i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Para Puxar Ligações:</strong></p>
+            <p>5 + RAMAL DESEJADO</p>
 
-            <p style="color: purple"><i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Para Transferir Ligações:</strong></p><p>FLASH + RAMAL DESEJADO</p>
+            <p style="color: purple"><i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Para Transferir Ligações:</strong></p>
+            <p>FLASH + RAMAL DESEJADO</p>
 
             <p style="color: purple"><i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Interurbano Para Telefone Fixo:</strong></p>
             <p>0 + DDD + NÚMERO DO TELEFONE</p>
@@ -471,9 +473,7 @@
                 <em class=""><strong>Proibido realizar ligações do fixo para celular.</strong></em>
             </p>
 
-                 <p style="color: purple">
-                     <i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Interurbano Para Celular:</strong>
-                 </p><p>021 + DDD + NÚMERO DO CELULAR</p>
+                 <p style="color: purple"><i class="fa-solid fa-circle" style="font-size: smaller"></i> <strong>Interurbano Para Celular:</strong></p><p>021 + DDD + NÚMERO DO CELULAR</p>
                 ✅ <em>Utilizar sempre a operadora Claro para esse tipo de ligação.</em>
 
 
@@ -482,7 +482,6 @@
         </div>
     </div>
 </div>
-
 
         <div class="col-12 mb-5">
             <h2 class="reveal text-center" style="color: purple;"><strong>SIGA-NOS NAS REDES SOCIAIS</strong></h2>
@@ -500,7 +499,7 @@
             <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2 mb-md-5 mb-lg-2">
                 <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2">
                 <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-instagram px-2" style="color: #d3d3d3;"></i>biosoftcosmeticos</div>
             </div>
             <div class="col-12 col-md-6 col-lg-4 col-xl-3 mb-2">
@@ -521,8 +520,6 @@
             <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                 <div class="fs-4" style="color: lightgray"><i class="fa-brands fa-pinterest px-2" style="color: #d3d3d3;"></i>softhaircosmeticos</div>
             </div>
-
-
             <div class="col-12 col-md-5 my-2 ">
                 <a href="https://loja.softhair.com.br" target="_blank" style="color: purple;" class="text-decoration-none">
                     <h3>loja.softhair.com.br</h3>
