--- a/Intranet/Views/Shared/_Layout.cshtml
+++ b/Intranet/Views/Shared/_Layout.cshtml
@@ -1,41 +1,44 @@
 ﻿<!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>INTRANET</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-          rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.13.6/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://cdn.datatables.net/2.3.4/css/dataTables.dataTables.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="~/Content/css/style.css" />
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css">
+    <link rel="stylesheet" href="~/Content/fullcalendar.min.css">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://cdn.datatables.net/v/dt/dt-2.2.2/datatables.min.css" rel="stylesheet" integrity="sha384-2vMryTPZxTZDZ3GnMBDVQV8OtmoutdrfJxnDTg0bVam9mZhi7Zr3J1+lkVFRr71f" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="~/Content/css/style.css">
     <link rel="stylesheet" href="~/Content/css/header.css">
-    <link rel="stylesheet" href="~/Content/css/bg.css">
-    <link rel="stylesheet"href="~/Content/css/calendar.css">
+    <link rel="stylesheet" href="~/Content/css/bg.css" />
+    <link rel="stylesheet" href="~/Content/css/calendar.css">
 </head>
 
 <body>
+    @*BG ANIMADO*@
     <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
 
-    <nav class="navbar navbar-expand-xl navbar-light custom_nav-container">
+    @*BARRA NAV*@
+    <nav class="navbar navbar-expand-lg navbar-light custom_nav-container">
         <div class="container-fluid">
-                <img src="~/Content/img/LogoRoxa.png" alt="Logo Softhair" style="width: 125px; height: auto;">
+            <img src="~/Content/img/LogoRoxa.png" class="d-none d-md-block" alt="Logo Softhair" style="width: 125px; height: auto;">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: white;">
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+                    style="background-color: white;">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#home" id="homeDropdown" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#home" id="homeDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
                             Home
                         </a>
                         <ul class="dropdown-menu">
@@ -45,9 +48,8 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-
-                        <a class="nav-link dropdown-toggle" href="#" id="instDropdown" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="instDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
                             Institucional
                         </a>
                         <ul class="dropdown-menu">
@@ -59,13 +61,16 @@
                     <li class="nav-item"><a class="nav-link" href="#lancamentos">LANÇAMENTOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="#ramais">RAMAIS</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="sisDropdown" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="sisDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
                             Sistemas
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="http://192.168.0.200/sics/" target="_blank">SICS</a></li>
-                            <li><a class="dropdown-item" href="http://192.168.0.200/relatorios/" target="_blank">RELATORIOS</a></li>
+                            <li>
+                                <a class="dropdown-item" href="http://192.168.0.200/relatorios/"
+                                   target="_blank">RELATORIOS</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -74,54 +79,44 @@
                         </a>
                     </li>
                 </ul>
-
             </div>
         </div>
-
     </nav>
 
-
-
     @RenderBody()
-
+    @*FOOTER*@
     <footer>
-
-
         <div class="row g-4 m-0 p-0" style="background-color: black;">
-                <div class="col-md-4 text-center text-white pt-5">
-                    <h5>Lojasofthair.com.br</h5>
-                </div>
-                <div class="col-md-4 footer-col text-center pt-4">
-                    <img src="~/Content/img/LogoRoxa.png" alt="" style="width: 125px; height: auto;">
-                    <img src="~/Content/img/outRosaone.png" alt="" style="width: 125px; height: auto;">
-                    <hr style="background-color: rgb(139, 137, 137);">
-                    <p class="text-white-50" style="color: #ccc;">Siga-nos nas redes sociais</p>
-                    <p class="fab fa-facebook-f" style="color: #ccc; margin: 0 10px; font-size: 23px;"></p>
-                    <p class="fab fa-instagram" style="color: #ccc; margin: 0 10px; font-size: 23px;"></p>
-                    <p class="fab fa-linkedin-in" style="color: #ccc; margin: 0 10px; font-size: 23px;"></p>
-                </div>
-                <div class="col-md-4 footer-col text-center text-white pt-5">
-                    <h5>Softhair.com.br</h5>
-                </div>
-                <div>
-                    <p class="text-white-50">
-                        Intranet - Softhair - Por: Arthur Reis
-                    </p>
-                </div>
+            <div class="col-md-4 text-center text-white pt-5">
+                <h5>Lojasofthair.com.br</h5>
             </div>
-            
+            <div class="col-md-4 footer-col text-center pt-4">
+                <img src="~/Content/img/LogoRoxa.png" alt="" style="width: 125px; height: auto;">
+                <img src="~/Content/img/outRosaone.png" alt="" style="width: 125px; height: auto;">
+                <hr style="background-color: rgb(139, 137, 137);">
+                <p class="text-white-50" style="color: #ccc;">Siga-nos nas redes sociais</p>
+                <p class="fab fa-facebook-f" style="color: #ccc; margin: 0 10px; font-size: 23px;"></p>
+                <p class="fab fa-instagram" style="color: #ccc; margin: 0 10px; font-size: 23px;"></p>
+                <p class="fab fa-linkedin-in" style="color: #ccc; margin: 0 10px; font-size: 23px;"></p>
+            </div>
+            <div class="col-md-4 footer-col text-center text-white pt-5">
+                <h5>Softhair.com.br</h5>
+            </div>
+            <div class="d-flex">
+                <p class="text-white-50">Intranet - Softhair - Por: Arthur Reis</p>
+            </div>
+        </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js"></script>
 
-    <script src="~/Content/javaScript/calendar.js"></script>
-    <script src="~/Content/javaScript/datables.js"></script>
-    <script src="~/Content/javaScript/script.js"></script>
+    <script src="~/Scripts/jquery-3.7.1.min.js"></script>
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/moment.min.js"></script>
 
+    <script src="https://cdn.datatables.net/v/dt/dt-2.2.2/datatables.min.js" integrity="sha384-2Ul6oqy3mEjM7dBJzKOck1Qb/mzlO+k/0BQv3D3C7u+Ri9+7OBINGa24AeOv5rgu" crossorigin="anonymous"></script>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
+
+    <script src="~/Scripts/calendar.js"></script>
+    <script src="~/Scripts/datables.js"></script>
+    <script src="~/Scripts/script.js"></script>
 </body>
 </html>
