UP bolotas -melhoria nas bolotas -responsividade

--- a/Intranet/Views/Home/Index.cshtml
+++ b/Intranet/Views/Home/Index.cshtml
@@ -29,8 +29,9 @@
                 <strong>Compartilhe</strong> no ambiente de trabalho.
             </p>
         </div>
+        @*AVISO 1*@
         <div class="row pt-5 justify-content-center">
-            <div class="col-sm-4 d-flex justify-content-center text-center">
+            <div class="col d-flex justify-content-center text-center">
                 <div data-bs-toggle="modal" data-bs-target="#encomenda">
                     <div class="card-body-avisos text-center justify-content-center px-3 mx-5 mb-4 ">
                         <h5 class="card-title py-2 text-success">
@@ -44,8 +45,8 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-sm-4 d-flex justify-content-center">
+            @*AVISO 2*@
+            <div class="col d-flex justify-content-center">
                 <div data-bs-toggle="modal" data-bs-target="#emprestimo">
                     <div class="card-body-avisos text-center justify-content-center p-3 mx-5 mb-4">
                         <h5 class="card-title py-2 text-danger">
@@ -58,8 +59,8 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-sm-4 d-flex justify-content-center">
+            @*AVISO 3*@
+            <div class="col d-flex justify-content-center">
                 <div>
                     <a href="#rgramais">
                         <div class="card-body-avisos text-center justify-content-center p-3 mx-5 mb-4">
