UP aniversariantes -adicionado aniversarariantes do proximo mes -melhoria nas class

--- a/Intranet/Views/Home/Index.cshtml
+++ b/Intranet/Views/Home/Index.cshtml
@@ -186,72 +186,132 @@
     </div>
 </div>
 
-@*ANIVERSARIO*@
+@*TABLE ANIVERSARIO*@
 <section id="aniversariantes" class="reveal">
     <div class="py-5 fw-bolder text-center">
         <h2 class="tt">
             Aniversariantes
         </h2>
     </div>
-    <div class="container p-3">
-        <table id="example" class="table table-hover">
-            <thead style="background-color: purple; color: white;">
+    <div class="container table-responsive rounded-2 bg-white w-75">
+        <table id="niver" class="table table-striped table-hover display">
+            <thead style="background-color: purple; color: white;" ead>
                 <tr>
-                    <th>Nome</th>
-                    <th>Data</th>
-                    <th>Departamento</th>
+                    <th style="background-color: purple; color: white;">Nome</th>
+                    <th style="background-color: purple; color: white;">Data</th>
+                    <th style="background-color: purple; color: white;">Departamento</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Kemilly Caroline</td>
-                    <td date-order="2025-10-02">02/10</td>
+                    <td>02/10/2025</td>
                     <td>Produção</td>
                 </tr>
                 <tr>
                     <td>Alessandra Ramos</td>
-                    <td date-order="2025-10-07">07/10</td>
+                    <td>07/10/2025</td>
                     <td>Produção</td>
                 </tr>
                 <tr>
                     <td>Reginaldo Alves</td>
-                    <td date-order="2025-10-07">07/10</td>
+                    <td>07/10/2025</td>
                     <td>Produção</td>
                 </tr>
                 <tr>
                     <td>Gabriela Maciel</td>
-                    <td date-order="2025-10-18">18/10</td>
+                    <td>14/10/2025</td>
                     <td>Produção</td>
                 </tr>
                 <tr>
                     <td>Pamela Regina</td>
-                    <td date-order="2025-10-27">27/10</td>
+                    <td>27/10/2025</td>
                     <td>Produção</td>
                 </tr>
                 <tr>
                     <td>Karolina Chaves</td>
-                    <td date-order="2025-10-19">19/10</td>
+                    <td>19/10/2025</td>
                     <td>Administrativo</td>
                 </tr>
                 <tr>
                     <td>Jaqueline Rodrigues</td>
-                    <td date-order="2025-10-25">25/10</td>
+                    <td>25/10/2025</td>
                     <td>Administrativo</td>
                 </tr>
                 <tr>
                     <td>Rodrigo Rosa</td>
-                    <td date-order="2025-10-12">12/10</td>
+                    <td>12/10/2025</td>
                     <td>Elza/CD</td>
                 </tr>
                 <tr>
                     <td>Tiago Ribeiro</td>
-                    <td date-order="2025-10-15">15/10</td>
+                    <td>15/10/2025</td>
                     <td>Distribuidora/Aplique</td>
                 </tr>
                 <tr>
                     <td>Luciano Vieira</td>
-                    <td date-order="2025-10-15">15/10</td>
+                    <td>15/10/2025</td>
                     <td>Administrativo</td>
+                </tr>
+                <tr>
+                    <td>Alana Cassia</td>
+                    <td>14/11/2025</td>
+                    <td>Produção</td>
+                </tr>
+                <tr>
+                    <td>Yuri Oliveira</td>
+                    <td>15/11/2025</td>
+                    <td>Produção</td>
+                </tr>
+                <tr>
+                    <td>Hudson Adriano</td>
+                    <td>27/11/2025</td>
+                    <td>Produção</td>
+                </tr>
+                <tr>
+                    <td>Luciene Pereira</td>
+                    <td>30/11/2025</td>
+                    <td>Produção</td>
+                </tr>
+                <tr>
+                    <td>Natã Benjamim</td>
+                    <td>10/11/2025</td>
+                    <td>Administrativo</td>
+                </tr>
+                <tr>
+                    <td>Gerald Wagner</td>
+                    <td>15/11/2025</td>
+                    <td>Administrativo</td>
+                </tr>
+                <tr>
+                    <td>Leticia Sousa</td>
+                    <td>19/11/2025</td>
+                    <td>Administrativo</td>
+                </tr>
+                <tr>
+                    <td>Aprendiz Mariane</td>
+                    <td>21/11/2025</td>
+                    <td>Administrativo</td>
+                </tr>
+                <tr>
+                    <td>Luiz Gustavo</td>
+                    <td>23/11/2025</td>
+                    <td>Administrativo</td>
+                </tr>
+                <tr>
+                    <td>Karina Flavia</td>
+                    <td>25/11/2025</td>
+                    <td>Administrativo</td>
+                </tr>
+                <tr>
+                    <td>Dayse Xavier</td>
+                    <td>27/11/2025</td>
+                    <td>Administrativo</td>
+                </tr>
+                <tr>
+                    <td>Lucas Vinicius</td>
+                    <td>19/11/2025</td>
+                    <td>Elza/CD</td>
                 </tr>
             </tbody>
         </table>
