UP calendario melhoria -conteudo -class

--- a/Intranet/Views/Home/Index.cshtml
+++ b/Intranet/Views/Home/Index.cshtml
@@ -324,14 +324,13 @@
         <div class="fw-bolder text-center py-5">
             <h2 class="tt3">Calendário</h2>
         </div>
-        <div class="container text-center">
+        <div class="container rounded-2 bg-white w-75 text-center">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div id="calendar" class="p-3"></div>
                 </div>
-
-                <div class="col-md-6 p-3">
-                    <h5 class="card-title">Datas Comemorativas</h5>
+                <div class="col-lg-6 p-3">
+                    <h5 class="tt2 card-title mb-5 text-white">Datas Comemorativas</h5>
                     <ul id="holiday-legend" class="list-unstyled text-start card-body"></ul>
                 </div>
             </div>
